# orbitalmap

./: .npmrc  README.md  package-lock.json  package.json
apps/contracts/: .env.example  README.md  hardhat.config.ts  package.json
apps/contracts/contracts/: L1POIMarketplace.sol  L2POIAuction.sol  ZkProofVerifier.sol
apps/contracts/deployments/: contracts.json
apps/contracts/scripts/: deploy.ts  updateL1.ts
apps/contracts/test/: POIMarketplace.test.ts
apps/oyster-rewards/: .dockerignore  API_README.md  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  stop.sh
apps/oyster-rewards/benches/: heatmap_generation.rs  location_verification.rs
apps/oyster-rewards/examples/: demo.rs
apps/oyster-rewards/src/: lib.rs
apps/oyster-rewards/src/analytics/: mod.rs
apps/oyster-rewards/src/crypto/: mod.rs
apps/oyster-rewards/src/heatmap/: mod.rs
apps/oyster-rewards/src/location/: mod.rs
apps/oyster-rewards/src/models/: mod.rs
apps/serverless/: README.md  package.json  wrangler.toml
apps/serverless/examples/: MapboxLLMComponent.tsx
apps/serverless/src/: config.ts  index.ts
apps/tee-backend/: Cargo.toml
apps/tee-backend/src/: main.rs
apps/tee-rewards/: Cargo.toml  Dockerfile  README.md  build-and-run.sh  docker-compose.yml  rebuild-web-interface.sh
apps/tee-rewards/web-interface/: Cargo.toml
apps/tee-rewards/web-interface/src/: main.rs
apps/web/: .env.example  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/zk_noir/: .gitignore  Nargo.toml  Prover.toml  README.md  generate_verifier.sh
(+76 files in other folders)
