[package]
name = "oyster-rewards"
version = "0.1.0"
edition = "2021"
authors = ["Oyster Dev Team"]
description = "Privacy-preserving location rewards and analytics"

[dependencies]
# Web server dependencies
actix-web = "4.4"
actix-files = "0.6.2"
actix-cors = "0.6"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
env_logger = "0.10"
log = "0.4"

# Crypto and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
x25519-dalek = "2.0.0"
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
base64 = "0.21"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }

# API dependencies
dotenv = "0.15"

[features]
default = []
testing = []

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tempfile = "3.8"

[[bin]]
name = "oyster-api"
path = "src/bin/api.rs"

[[bench]]
name = "heatmap_generation"
harness = false

[[bench]]
name = "location_verification"
harness = false
